--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>GIT DEMO1</h1>
-    <p>nghia test demo</p>
+    <p>nghia test demo, co y de conflict ne babe</p>
   </body>
 </html>
