Add yua and miami

--- a/java.html
+++ b/java.html
@@ -10,6 +10,8 @@
         <l1>Oizawa -993</l1>
         <l1>Yua Mikami - 556</l1>
         <l1>asdf</l1>
+        <l1>Yua Mikami - 556</l1>
+        <l1>asdf</l1>
     </ul>
   </body>
 </html>
